--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest-version",
-    "react": "latest-version",
-    "react-dom": "latest-version"
+    "next": "13.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
